Feat: Marcha Cup System - Student Portal, Ranking & DB Fixes (SQLite/PG)

--- a/frontend/agenda.html
+++ b/frontend/agenda.html
@@ -180,7 +180,7 @@
   </div>
 
   <script src="utils.js"></script>
-  <script src="agenda.js"></script>
+  <script src="agenda.js?v=10"></script>
 </body>
 
 </html>
