--- a/frontend/portal_aluno.html
+++ b/frontend/portal_aluno.html
@@ -3,61 +3,355 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal do Aluno - Marcha</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cup.css"> <!-- Reuse some styles -->
-    <link rel="stylesheet" href="portal_aluno.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg-dark: #0F1A2A;
+            --card-bg: rgba(255, 255, 255, 0.05);
+            --gold: #FFD700;
+        }
+
+        body {
+            background-color: var(--bg-dark);
+            color: #fff;
+            font-family: 'Outfit', sans-serif;
+            padding-bottom: 80px;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Hero Section */
+        .student-hero {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.02));
+            border-radius: 24px;
+            padding: 30px;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            margin-bottom: 24px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .hero-bg-glow {
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, var(--house-color, #4A90E2) 0%, transparent 60%);
+            opacity: 0.2;
+            z-index: 0;
+            animation: pulse 5s infinite alternate;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 0.15;
+            }
+
+            100% {
+                transform: scale(1.1);
+                opacity: 0.25;
+            }
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .avatar-container {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 16px;
+            position: relative;
+        }
+
+        .avatar {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid #fff;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        .house-badge {
+            position: absolute;
+            bottom: -5px;
+            right: -5px;
+            width: 36px;
+            height: 36px;
+            background: #fff;
+            border-radius: 50%;
+            padding: 4px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .student-name {
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin: 0 0 8px 0;
+        }
+
+        .house-label {
+            display: inline-block;
+            padding: 6px 16px;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 20px;
+            font-size: 0.9rem;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            font-weight: 600;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            margin-bottom: 24px;
+        }
+
+        /* Stats Grid */
+        .stats-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 16px;
+            margin-bottom: 24px;
+        }
+
+        .stat-card {
+            background: var(--card-bg);
+            padding: 20px;
+            border-radius: 16px;
+            text-align: center;
+        }
+
+        .stat-val {
+            font-size: 2rem;
+            font-weight: 800;
+            display: block;
+            margin-bottom: 4px;
+        }
+
+        .stat-label {
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 0.85rem;
+            text-transform: uppercase;
+        }
+
+        /* History List */
+        .section-title {
+            font-size: 1.2rem;
+            margin-bottom: 16px;
+            padding-left: 8px;
+            border-left: 4px solid var(--gold);
+        }
+
+        .history-list {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .history-item {
+            background: var(--card-bg);
+            padding: 16px;
+            border-radius: 12px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .history-main {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .history-desc {
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        .history-date {
+            font-size: 0.8rem;
+            color: rgba(255, 255, 255, 0.5);
+            margin-top: 4px;
+        }
+
+        .history-pts {
+            font-size: 1.2rem;
+            font-weight: 700;
+            color: var(--gold);
+        }
+
+        /* Floating Action Button for Ranking */
+        .fab-ranking {
+            position: fixed;
+            bottom: 90px;
+            right: 20px;
+            background: linear-gradient(135deg, #FFD700 0%, #FFA500 100%);
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 12px rgba(255, 215, 0, 0.4);
+            font-size: 24px;
+            color: #000;
+            text-decoration: none;
+            transition: transform 0.2s;
+            z-index: 90;
+        }
+
+        .fab-ranking:hover {
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 
 <body>
-    <header class="topbar">
-        <a href="#" class="brand">
-            <img src="../assets/logo_marcha.png" alt="Logo" class="logo">
-            <span class="title">Portal do Aluno</span>
-        </a>
-        <nav class="nav-links">
-            <span id="user-display" style="color: white; margin-right: 15px; font-weight: 500;"></span>
-            <button onclick="logout()" class="btn-secondary btn-sm"
-                style="border: 1px solid white; background: transparent; color: white;">Sair</button>
-        </nav>
-    </header>
 
-    <main>
-        <div class="page-header">
-            <h1 id="welcome-msg">Olá, Aluno!</h1>
-            <p>Acompanhe seu desempenho na Marcha Cup 🏆</p>
+    <div class="container">
+        <!-- HEADER -->
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+            <img src="../assets/logo_marcha.png" style="height: 30px; opacity: 0.8;" alt="Logo">
+            <button onclick="logout()"
+                style="background:none; border:none; color: rgba(255,255,255,0.5); cursor: pointer;">Sair</button>
         </div>
 
-        <!-- Stats Grid -->
-        <div class="dashboard-grid">
-
-            <!-- My House Card -->
-            <div class="card my-house-card" id="house-card">
-                <div class="loading">Carregando dados da casa...</div>
-            </div>
-
-            <!-- Ranking Chart -->
-            <div class="card chart-card">
-                <h3>Ranking Geral 📊</h3>
-                <div class="chart-container">
-                    <canvas id="rankingChart"></canvas>
+        <!-- HERO -->
+        <div id="hero-section" class="student-hero">
+            <div class="hero-bg-glow"></div>
+            <div class="hero-content">
+                <div class="avatar-container">
+                    <img id="user-photo" src="../assets/user_placeholder.png" alt="User" class="avatar"
+                        onerror="this.src='../assets/user_placeholder.png'">
+                    <img id="house-crest" src="" class="house-badge" style="display:none;">
                 </div>
+                <h1 id="user-name" class="student-name">Carregando...</h1>
+                <div id="house-name" class="house-label" style="display: none;">Sem Casa</div>
             </div>
-
         </div>
 
-        <!-- Recent History -->
-        <section class="card" style="margin-top: 20px;">
-            <h3>Minhas Conquistas Recentes</h3>
-            <ul id="score-history" class="score-list">
-                <li>Carregando histórico...</li>
-            </ul>
-        </section>
+        <!-- STATS -->
+        <div class="stats-grid">
+            <div class="stat-card">
+                <span id="total-score" class="stat-val" style="color: var(--house-color, #fff)">0</span>
+                <span class="stat-label">Pontos Totais</span>
+            </div>
+            <div class="stat-card">
+                <span id="global-rank" class="stat-val">#--</span>
+                <span class="stat-label">Ranking Geral</span>
+            </div>
+        </div>
 
-    </main>
+        <!-- HISTORY -->
+        <h2 class="section-title">Últimas Conquistas</h2>
+        <div id="history-list" class="history-list">
+            <p style="text-align: center; color: #888; font-style: italic;">Nenhuma pontuação ainda.</p>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="portal_aluno.js"></script>
+    </div>
+
+    <!-- FAB -->
+    <a href="ranking.html" class="fab-ranking" title="Ver Ranking">🏆</a>
+
+    <script>
+        const user = JSON.parse(localStorage.getItem('user'));
+        if (!user) window.location.href = 'login.html';
+
+        function logout() {
+            localStorage.removeItem('user');
+            window.location.href = 'login.html';
+        }
+
+        async function loadStudentData() {
+            try {
+                const res = await fetch(`/api/student-portal/${user.id}`);
+                const data = await res.json();
+
+                if (data.error) {
+                    console.error("Error:", data.error);
+                    return;
+                }
+
+                // Update UI
+                document.getElementById('user-name').textContent = user.name; // Use session name initially
+                if (data.patient && data.patient.photo) {
+                    document.getElementById('user-photo').src = data.patient.photo;
+                }
+
+                // House Info
+                if (data.house) {
+                    const houseColor = data.house.color || '#4A90E2';
+                    document.documentElement.style.setProperty('--house-color', houseColor);
+
+                    document.getElementById('house-name').textContent = data.house.name;
+                    document.getElementById('house-name').style.display = 'inline-block';
+                    document.getElementById('house-name').style.color = houseColor;
+                    document.getElementById('house-name').style.borderColor = houseColor;
+
+                    if (data.house.crest) {
+                        const badge = document.getElementById('house-crest');
+                        badge.src = data.house.crest;
+                        badge.style.display = 'block';
+                    }
+                }
+
+                // Stats
+                if (data.athlete) {
+                    document.getElementById('total-score').textContent = data.athlete.totalScore;
+                }
+
+                // Calculate Rank
+                // The API returns 'ranking' array. We find our house index.
+                // Wait, ranking is HOUSE ranking. We want STUDENT ranking?
+                // The backend API `student-portal` returns `ranking` which is house ranking.
+                // For Student Global Rank, we need another query or logic.
+                // For now, let's show House Rank? Or just hide it if we don't have it.
+                // Looking at index.js, `api/student-portal` returns `ranking: rRes.rows` (House Ranking).
+                // It doesn't calculate individual student rank.
+                // I will hide Global Rank or replace it with "House Rank" for now.
+
+                if (data.ranking && data.house) {
+                    const houseRank = data.ranking.findIndex(h => h.name === data.house.name) + 1;
+                    document.getElementById('global-rank').textContent = '#' + houseRank;
+                    document.querySelector('.stat-card:nth-child(2) .stat-label').textContent = 'Ranking da Casa';
+                }
+
+                // History
+                if (data.scores && data.scores.length > 0) {
+                    const list = document.getElementById('history-list');
+                    list.innerHTML = '';
+                    data.scores.forEach(score => {
+                        const div = document.createElement('div');
+                        div.className = 'history-item';
+                        div.innerHTML = `
+                            <div class="history-main">
+                                <span class="history-desc">${score.rule_name || 'Pontuação'}</span>
+                                <span class="history-date">${new Date().toLocaleDateString()}</span> 
+                            </div>
+                            <span class="history-pts" style="color: var(--house-color)">+${score.value}</span>
+                        `;
+                        // Note: score object from DB might not have date, using Today as placeholder or need to check DB schema
+                        list.appendChild(div);
+                    });
+                }
+
+            } catch (e) {
+                console.error("Fetch error:", e);
+            }
+        }
+
+        loadStudentData();
+    </script>
 </body>
 
 </html>
