--- a/frontend/pacientes.html
+++ b/frontend/pacientes.html
@@ -98,6 +98,20 @@
             <input type="text" id="patient-cpf" name="cpf" placeholder="000.000.000-00">
           </div>
           <div class="form-group">
+            <label>Login (Username)</label>
+            <input type="text" id="patient-username" name="username" placeholder="teste.aluno">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label>Casa (Marcha Cup) 🏆</label>
+            <select id="patient-house" name="house_id">
+              <option value="">-- Sem Casa --</option>
+              <!-- Populated by JS -->
+            </select>
+          </div>
+          <div class="form-group">
             <label>Data de Nascimento</label>
             <input type="date" id="patient-birth_date" name="birth_date">
           </div>
@@ -111,6 +125,10 @@
           <div class="form-group">
             <label>E-mail</label>
             <input type="email" id="patient-email" name="email">
+          </div>
+          <div class="form-group">
+            <label>Senha de Acesso</label>
+            <input type="text" id="patient-password" name="password" placeholder="Padrão: aluno">
           </div>
         </div>
 
